--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "mysql": "^2.18.1"
   }
 }
